RWD done with Bootsrap classes

--- a/src/partials/70_section-blog-posts.html
+++ b/src/partials/70_section-blog-posts.html
@@ -14,7 +14,7 @@
       </div>
     </div>
     <div class="row">
-      <div class="column">
+      <div class="col-md-4 col-sm-6">
         <div class="post-box">
           <div class="cover">
             <img src="../src/images/blog1.jpeg" alt="blog1" />
@@ -35,7 +35,7 @@
         </div>
       </div>
 
-      <div class="column">
+      <div class="col-md-4 col-sm-6">
         <div class="post-box">
           <div class="cover">
             <img src="../src/images/blog2.jpeg" alt="blog2" />
@@ -56,7 +56,7 @@
         </div>
       </div>
 
-      <div class="column">
+      <div class="col-md-4 col-sm-6">
         <div class="post-box">
           <div class="cover">
             <img src="../src/images/blog3.jpeg" alt="blog3" />
