Add RWD to footer

--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -78,3 +78,14 @@ footer {
     }
   }
 }
+
+@media (min-width: 768px) and (max-width: 1024px) {
+  .copyright {
+    p {
+      text-align: left;
+    }
+  }
+  .left-placeholder {
+    text-align: center;
+  }
+}
