--- a/src/partials/50_section-products.html
+++ b/src/partials/50_section-products.html
@@ -6,14 +6,7 @@
         <div class="col menu">
           <ul class="nav nav-tabs menu-tab-list" role="tablist">
             <li role="presentation">
-              <a
-                href="#bed"
-                aria-controls="bed"
-                role="tab"
-                data-toggle="tab"
-                class="active category-tab-select"
-                >Bed</a
-              >
+              <a href="#bed" aria-controls="bed" role="tab" data-toggle="tab">Bed</a>
             </li>
             <li role="presentation">
               <a
@@ -78,9 +71,9 @@
                   <div class="sale">sale</div>
                   <div class="buttons">
                     <a href="#" class="btn-main-small">Quick View</a>
-                    <a href="#" class="btn-main-small">
-                      <i class="fa fa-shopping-basket"></i> ADD TO CART
-                    </a>
+                    <a href="#" class="btn-main-small"
+                      ><i class="fa fa-shopping-basket"></i> ADD TO CART</a
+                    >
                   </div>
                 </div>
                 <div class="content">
@@ -115,9 +108,9 @@
                   <div class="sale">sale</div>
                   <div class="buttons">
                     <a href="#" class="btn-main-small">Quick View</a>
-                    <a href="#" class="btn-main-small">
-                      <i class="fa fa-shopping-basket"></i> ADD TO CART
-                    </a>
+                    <a href="#" class="btn-main-small"
+                      ><i class="fa fa-shopping-basket"></i> ADD TO CART</a
+                    >
                   </div>
                 </div>
                 <div class="content">
@@ -147,9 +140,9 @@
                   <div class="sale">sale</div>
                   <div class="buttons">
                     <a href="#" class="btn-main-small">Quick View</a>
-                    <a href="#" class="btn-main-small">
-                      <i class="fa fa-shopping-basket"></i> ADD TO CART
-                    </a>
+                    <a href="#" class="btn-main-small"
+                      ><i class="fa fa-shopping-basket"></i> ADD TO CART</a
+                    >
                   </div>
                 </div>
                 <div class="content">
@@ -179,9 +172,9 @@
                   <div class="sale">sale</div>
                   <div class="buttons">
                     <a href="#" class="btn-main-small">Quick View</a>
-                    <a href="#" class="btn-main-small">
-                      <i class="fa fa-shopping-basket"></i> ADD TO CART
-                    </a>
+                    <a href="#" class="btn-main-small"
+                      ><i class="fa fa-shopping-basket"></i> ADD TO CART</a
+                    >
                   </div>
                 </div>
                 <div class="content">
@@ -211,9 +204,9 @@
                   <div class="sale">sale</div>
                   <div class="buttons">
                     <a href="#" class="btn-main-small">Quick View</a>
-                    <a href="#" class="btn-main-small">
-                      <i class="fa fa-shopping-basket"></i> ADD TO CART
-                    </a>
+                    <a href="#" class="btn-main-small"
+                      ><i class="fa fa-shopping-basket"></i> ADD TO CART</a
+                    >
                   </div>
                 </div>
                 <div class="content">
@@ -243,9 +236,9 @@
                   <div class="sale">sale</div>
                   <div class="buttons">
                     <a href="#" class="btn-main-small">Quick View</a>
-                    <a href="#" class="btn-main-small">
-                      <i class="fa fa-shopping-basket"></i> ADD TO CART
-                    </a>
+                    <a href="#" class="btn-main-small"
+                      ><i class="fa fa-shopping-basket"></i> ADD TO CART</a
+                    >
                   </div>
                 </div>
                 <div class="content">
@@ -280,9 +273,9 @@
                   <div class="sale">sale</div>
                   <div class="buttons">
                     <a href="#" class="btn-main-small">Quick View</a>
-                    <a href="#" class="btn-main-small">
-                      <i class="fa fa-shopping-basket"></i> ADD TO CART
-                    </a>
+                    <a href="#" class="btn-main-small"
+                      ><i class="fa fa-shopping-basket"></i> ADD TO CART</a
+                    >
                   </div>
                 </div>
                 <div class="content">
@@ -312,9 +305,9 @@
                   <div class="sale">sale</div>
                   <div class="buttons">
                     <a href="#" class="btn-main-small">Quick View</a>
-                    <a href="#" class="btn-main-small">
-                      <i class="fa fa-shopping-basket"></i> ADD TO CART
-                    </a>
+                    <a href="#" class="btn-main-small"
+                      ><i class="fa fa-shopping-basket"></i> ADD TO CART</a
+                    >
                   </div>
                 </div>
                 <div class="content">
@@ -349,9 +342,9 @@
                   <div class="sale">sale</div>
                   <div class="buttons">
                     <a href="#" class="btn-main-small">Quick View</a>
-                    <a href="#" class="btn-main-small">
-                      <i class="fa fa-shopping-basket"></i> ADD TO CART
-                    </a>
+                    <a href="#" class="btn-main-small"
+                      ><i class="fa fa-shopping-basket"></i> ADD TO CART</a
+                    >
                   </div>
                 </div>
                 <div class="content">
@@ -386,9 +379,9 @@
                   <div class="sale">sale</div>
                   <div class="buttons">
                     <a href="#" class="btn-main-small">Quick View</a>
-                    <a href="#" class="btn-main-small">
-                      <i class="fa fa-shopping-basket"></i> ADD TO CART
-                    </a>
+                    <a href="#" class="btn-main-small"
+                      ><i class="fa fa-shopping-basket"></i> ADD TO CART</a
+                    >
                   </div>
                 </div>
                 <div class="content">
@@ -418,9 +411,9 @@
                   <div class="sale">sale</div>
                   <div class="buttons">
                     <a href="#" class="btn-main-small">Quick View</a>
-                    <a href="#" class="btn-main-small">
-                      <i class="fa fa-shopping-basket"></i> ADD TO CART
-                    </a>
+                    <a href="#" class="btn-main-small"
+                      ><i class="fa fa-shopping-basket"></i> ADD TO CART</a
+                    >
                   </div>
                 </div>
                 <div class="content">
