--- a/src/partials/50_section-products.html
+++ b/src/partials/50_section-products.html
@@ -15,8 +15,9 @@
                 role="tab"
                 data-toggle="tab"
                 class="category-tab-select"
-                >Chair</a
               >
+                Chair
+              </a>
             </li>
             <li role="presentation">
               <a
@@ -25,8 +26,9 @@
                 role="tab"
                 data-toggle="tab"
                 class="category-tab-select"
-                >Sofa</a
               >
+                Sofa
+              </a>
             </li>
             <li role="presentation">
               <a
@@ -35,8 +37,9 @@
                 role="tab"
                 data-toggle="tab"
                 class="category-tab-select"
-                >Table</a
               >
+                Table
+              </a>
             </li>
             <li role="presentation">
               <a
@@ -45,8 +48,9 @@
                 role="tab"
                 data-toggle="tab"
                 class="category-tab-select"
-                >Dining</a
               >
+                Dining
+              </a>
             </li>
           </ul>
         </div>
@@ -71,9 +75,9 @@
                   <div class="sale">sale</div>
                   <div class="buttons">
                     <a href="#" class="btn-main-small">Quick View</a>
-                    <a href="#" class="btn-main-small"
-                      ><i class="fa fa-shopping-basket"></i> ADD TO CART</a
-                    >
+                    <a href="#" class="btn-main-small">
+                      <i class="fa fa-shopping-basket"></i> ADD TO CART
+                    </a>
                   </div>
                 </div>
                 <div class="content">
@@ -86,10 +90,10 @@
                 <div class="line"></div>
                 <div class="actions">
                   <div class="outlines">
-                    <a href="#" class="btn-outline"><i class="far fa-heart"></i></a>
-                    <a href="#" class="btn-outline"
-                      ><i class="fas fa-exchange-alt"></i
-                    ></a>
+                    <a href="#" class="btn-outline"> <i class="far fa-heart"></i> </a>
+                    <a href="#" class="btn-outline">
+                      <i class="fas fa-exchange-alt"></i>
+                    </a>
                   </div>
                   <div class="price">
                     <div class="btn-main-small no-hover">$ 30.00</div>
@@ -108,9 +112,9 @@
                   <div class="sale">sale</div>
                   <div class="buttons">
                     <a href="#" class="btn-main-small">Quick View</a>
-                    <a href="#" class="btn-main-small"
-                      ><i class="fa fa-shopping-basket"></i> ADD TO CART</a
-                    >
+                    <a href="#" class="btn-main-small">
+                      <i class="fa fa-shopping-basket"></i> ADD TO CART
+                    </a>
                   </div>
                 </div>
                 <div class="content">
@@ -123,10 +127,10 @@
                 <div class="line"></div>
                 <div class="actions">
                   <div class="outlines">
-                    <a href="#" class="btn-outline"><i class="far fa-heart"></i></a>
-                    <a href="#" class="btn-outline"
-                      ><i class="fas fa-exchange-alt"></i
-                    ></a>
+                    <a href="#" class="btn-outline"> <i class="far fa-heart"></i> </a>
+                    <a href="#" class="btn-outline">
+                      <i class="fas fa-exchange-alt"></i>
+                    </a>
                   </div>
                   <div class="price">
                     <div class="btn-main-small no-hover">$ 30.00</div>
@@ -140,9 +144,9 @@
                   <div class="sale">sale</div>
                   <div class="buttons">
                     <a href="#" class="btn-main-small">Quick View</a>
-                    <a href="#" class="btn-main-small"
-                      ><i class="fa fa-shopping-basket"></i> ADD TO CART</a
-                    >
+                    <a href="#" class="btn-main-small">
+                      <i class="fa fa-shopping-basket"></i> ADD TO CART
+                    </a>
                   </div>
                 </div>
                 <div class="content">
@@ -155,10 +159,10 @@
                 <div class="line"></div>
                 <div class="actions">
                   <div class="outlines">
-                    <a href="#" class="btn-outline"><i class="far fa-heart"></i></a>
-                    <a href="#" class="btn-outline"
-                      ><i class="fas fa-exchange-alt"></i
-                    ></a>
+                    <a href="#" class="btn-outline"> <i class="far fa-heart"></i> </a>
+                    <a href="#" class="btn-outline">
+                      <i class="fas fa-exchange-alt"></i>
+                    </a>
                   </div>
                   <div class="price">
                     <div class="btn-main-small no-hover">$ 30.00</div>
@@ -172,9 +176,9 @@
                   <div class="sale">sale</div>
                   <div class="buttons">
                     <a href="#" class="btn-main-small">Quick View</a>
-                    <a href="#" class="btn-main-small"
-                      ><i class="fa fa-shopping-basket"></i> ADD TO CART</a
-                    >
+                    <a href="#" class="btn-main-small">
+                      <i class="fa fa-shopping-basket"></i> ADD TO CART
+                    </a>
                   </div>
                 </div>
                 <div class="content">
@@ -187,10 +191,10 @@
                 <div class="line"></div>
                 <div class="actions">
                   <div class="outlines">
-                    <a href="#" class="btn-outline"><i class="far fa-heart"></i></a>
-                    <a href="#" class="btn-outline"
-                      ><i class="fas fa-exchange-alt"></i
-                    ></a>
+                    <a href="#" class="btn-outline"> <i class="far fa-heart"></i> </a>
+                    <a href="#" class="btn-outline">
+                      <i class="fas fa-exchange-alt"></i>
+                    </a>
                   </div>
                   <div class="price">
                     <div class="btn-main-small no-hover">$ 30.00</div>
@@ -204,9 +208,9 @@
                   <div class="sale">sale</div>
                   <div class="buttons">
                     <a href="#" class="btn-main-small">Quick View</a>
-                    <a href="#" class="btn-main-small"
-                      ><i class="fa fa-shopping-basket"></i> ADD TO CART</a
-                    >
+                    <a href="#" class="btn-main-small">
+                      <i class="fa fa-shopping-basket"></i> ADD TO CART
+                    </a>
                   </div>
                 </div>
                 <div class="content">
@@ -219,10 +223,10 @@
                 <div class="line"></div>
                 <div class="actions">
                   <div class="outlines">
-                    <a href="#" class="btn-outline"><i class="far fa-heart"></i></a>
-                    <a href="#" class="btn-outline"
-                      ><i class="fas fa-exchange-alt"></i
-                    ></a>
+                    <a href="#" class="btn-outline"> <i class="far fa-heart"></i> </a>
+                    <a href="#" class="btn-outline">
+                      <i class="fas fa-exchange-alt"></i>
+                    </a>
                   </div>
                   <div class="price">
                     <div class="btn-main-small no-hover">$ 30.00</div>
@@ -236,9 +240,9 @@
                   <div class="sale">sale</div>
                   <div class="buttons">
                     <a href="#" class="btn-main-small">Quick View</a>
-                    <a href="#" class="btn-main-small"
-                      ><i class="fa fa-shopping-basket"></i> ADD TO CART</a
-                    >
+                    <a href="#" class="btn-main-small">
+                      <i class="fa fa-shopping-basket"></i> ADD TO CART
+                    </a>
                   </div>
                 </div>
                 <div class="content">
@@ -251,10 +255,10 @@
                 <div class="line"></div>
                 <div class="actions">
                   <div class="outlines">
-                    <a href="#" class="btn-outline"><i class="far fa-heart"></i></a>
-                    <a href="#" class="btn-outline"
-                      ><i class="fas fa-exchange-alt"></i
-                    ></a>
+                    <a href="#" class="btn-outline"> <i class="far fa-heart"></i> </a>
+                    <a href="#" class="btn-outline">
+                      <i class="fas fa-exchange-alt"></i>
+                    </a>
                   </div>
                   <div class="price">
                     <div class="btn-main-small no-hover">$ 30.00</div>
@@ -273,9 +277,9 @@
                   <div class="sale">sale</div>
                   <div class="buttons">
                     <a href="#" class="btn-main-small">Quick View</a>
-                    <a href="#" class="btn-main-small"
-                      ><i class="fa fa-shopping-basket"></i> ADD TO CART</a
-                    >
+                    <a href="#" class="btn-main-small">
+                      <i class="fa fa-shopping-basket"></i> ADD TO CART
+                    </a>
                   </div>
                 </div>
                 <div class="content">
@@ -288,10 +292,10 @@
                 <div class="line"></div>
                 <div class="actions">
                   <div class="outlines">
-                    <a href="#" class="btn-outline"><i class="far fa-heart"></i></a>
-                    <a href="#" class="btn-outline"
-                      ><i class="fas fa-exchange-alt"></i
-                    ></a>
+                    <a href="#" class="btn-outline"> <i class="far fa-heart"></i> </a>
+                    <a href="#" class="btn-outline">
+                      <i class="fas fa-exchange-alt"></i>
+                    </a>
                   </div>
                   <div class="price">
                     <div class="btn-main-small no-hover">$ 30.00</div>
@@ -305,9 +309,9 @@
                   <div class="sale">sale</div>
                   <div class="buttons">
                     <a href="#" class="btn-main-small">Quick View</a>
-                    <a href="#" class="btn-main-small"
-                      ><i class="fa fa-shopping-basket"></i> ADD TO CART</a
-                    >
+                    <a href="#" class="btn-main-small">
+                      <i class="fa fa-shopping-basket"></i> ADD TO CART
+                    </a>
                   </div>
                 </div>
                 <div class="content">
@@ -320,10 +324,10 @@
                 <div class="line"></div>
                 <div class="actions">
                   <div class="outlines">
-                    <a href="#" class="btn-outline"><i class="far fa-heart"></i></a>
-                    <a href="#" class="btn-outline"
-                      ><i class="fas fa-exchange-alt"></i
-                    ></a>
+                    <a href="#" class="btn-outline"> <i class="far fa-heart"></i> </a>
+                    <a href="#" class="btn-outline">
+                      <i class="fas fa-exchange-alt"></i>
+                    </a>
                   </div>
                   <div class="price">
                     <div class="btn-main-small no-hover">$ 30.00</div>
@@ -342,9 +346,9 @@
                   <div class="sale">sale</div>
                   <div class="buttons">
                     <a href="#" class="btn-main-small">Quick View</a>
-                    <a href="#" class="btn-main-small"
-                      ><i class="fa fa-shopping-basket"></i> ADD TO CART</a
-                    >
+                    <a href="#" class="btn-main-small">
+                      <i class="fa fa-shopping-basket"></i> ADD TO CART
+                    </a>
                   </div>
                 </div>
                 <div class="content">
@@ -357,10 +361,10 @@
                 <div class="line"></div>
                 <div class="actions">
                   <div class="outlines">
-                    <a href="#" class="btn-outline"><i class="far fa-heart"></i></a>
-                    <a href="#" class="btn-outline"
-                      ><i class="fas fa-exchange-alt"></i
-                    ></a>
+                    <a href="#" class="btn-outline"> <i class="far fa-heart"></i> </a>
+                    <a href="#" class="btn-outline">
+                      <i class="fas fa-exchange-alt"></i>
+                    </a>
                   </div>
                   <div class="price">
                     <div class="btn-main-small no-hover">$ 30.00</div>
@@ -379,9 +383,9 @@
                   <div class="sale">sale</div>
                   <div class="buttons">
                     <a href="#" class="btn-main-small">Quick View</a>
-                    <a href="#" class="btn-main-small"
-                      ><i class="fa fa-shopping-basket"></i> ADD TO CART</a
-                    >
+                    <a href="#" class="btn-main-small">
+                      <i class="fa fa-shopping-basket"></i> ADD TO CART
+                    </a>
                   </div>
                 </div>
                 <div class="content">
@@ -394,10 +398,10 @@
                 <div class="line"></div>
                 <div class="actions">
                   <div class="outlines">
-                    <a href="#" class="btn-outline"><i class="far fa-heart"></i></a>
-                    <a href="#" class="btn-outline"
-                      ><i class="fas fa-exchange-alt"></i
-                    ></a>
+                    <a href="#" class="btn-outline"> <i class="far fa-heart"></i> </a>
+                    <a href="#" class="btn-outline">
+                      <i class="fas fa-exchange-alt"></i>
+                    </a>
                   </div>
                   <div class="price">
                     <div class="btn-main-small no-hover">$ 30.00</div>
@@ -411,9 +415,9 @@
                   <div class="sale">sale</div>
                   <div class="buttons">
                     <a href="#" class="btn-main-small">Quick View</a>
-                    <a href="#" class="btn-main-small"
-                      ><i class="fa fa-shopping-basket"></i> ADD TO CART</a
-                    >
+                    <a href="#" class="btn-main-small">
+                      <i class="fa fa-shopping-basket"></i> ADD TO CART
+                    </a>
                   </div>
                 </div>
                 <div class="content">
@@ -427,9 +431,9 @@
                 <div class="actions">
                   <div class="outlines">
                     <a href="#" class="btn-outline"><i class="far fa-heart"></i></a>
-                    <a href="#" class="btn-outline"
-                      ><i class="fas fa-exchange-alt"></i
-                    ></a>
+                    <a href="#" class="btn-outline">
+                      <i class="fas fa-exchange-alt"></i>
+                    </a>
                   </div>
                   <div class="price">
                     <div class="btn-main-small no-hover">$ 30.00</div>
