--- a/src/sass/components/_post-box.scss
+++ b/src/sass/components/_post-box.scss
@@ -52,7 +52,7 @@
     padding: 25px;
 
     .post-title {
-      color: $text-color;
+      color: $base-color;
       font-size: 16px;
       line-height: 24px;
       letter-spacing: 1px;
