Add bootstrap grid classes to new furniture section

--- a/src/partials/50_section-products.html
+++ b/src/partials/50_section-products.html
@@ -22,7 +22,7 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-3">
+      <div class="col-12 col-sm-6 col-lg-4">
         <div class="product-box">
           <div class="photo">
             <img src="../src/images//furniture1.jpeg" alt="furniture1" />
@@ -51,7 +51,7 @@
           </div>
         </div>
       </div>
-      <div class="col-3">
+      <div class="col-12 col-sm-6 col-lg-4">
         <div class="product-box">
           <div class="photo">
             <img src="../src/images/furniture2.jpeg" alt="furniture2" />
@@ -80,7 +80,7 @@
           </div>
         </div>
       </div>
-      <div class="col-3">
+      <div class="col-12 col-sm-6 col-lg-4">
         <div class="product-box">
           <div class="photo">
             <img src="../src/images/furniture3.jpeg" alt="furniture3" />
@@ -111,7 +111,7 @@
           </div>
         </div>
       </div>
-      <div class="col-3">
+      <div class="col-12 col-sm-6 col-lg-4">
         <div class="product-box">
           <div class="photo">
             <img src="../src/images/furniture4.jpeg" alt="furniture4" />
@@ -142,7 +142,7 @@
           </div>
         </div>
       </div>
-      <div class="col-3">
+      <div class="col-12 col-sm-6 col-lg-4">
         <div class="product-box">
           <div class="photo">
             <img src="../src/images/furniture5.jpeg" alt="furniture5" />
@@ -171,7 +171,7 @@
           </div>
         </div>
       </div>
-      <div class="col-3">
+      <div class="col-12 col-sm-6 col-lg-4">
         <div class="product-box">
           <div class="photo">
             <img src="../src/images/furniture6.jpeg" alt="furniture6" />
@@ -200,7 +200,7 @@
           </div>
         </div>
       </div>
-      <div class="col-3">
+      <div class="col-12 col-sm-6 col-lg-4">
         <div class="product-box">
           <div class="photo">
             <img src="../src/images/furniture7.jpeg" alt="furniture7" />
@@ -229,7 +229,7 @@
           </div>
         </div>
       </div>
-      <div class="col-3">
+      <div class="col-12 col-sm-6 col-lg-4">
         <div class="product-box">
           <div class="photo">
             <img src="../src/images/furniture8.jpeg" alt="furniture8" />
