Fix missing parts of script

--- a/src/partials/50_section-products.html
+++ b/src/partials/50_section-products.html
@@ -6,7 +6,15 @@
         <div class="col menu">
           <ul class="nav nav-tabs menu-tab-list" role="tablist">
             <li role="presentation">
-              <a href="#bed" aria-controls="bed" role="tab" data-toggle="tab">Bed</a>
+              <a
+                href="#bed"
+                aria-controls="bed"
+                role="tab"
+                data-toggle="tab"
+                class="category-tab-select"
+              >
+                Bed
+              </a>
             </li>
             <li role="presentation">
               <a
@@ -106,6 +114,38 @@
 
         <div role="tabpanel" class="tab-pane fade in active show" id="bed">
           <div class="row">
+            <div class="col-3">
+              <div class="product-box">
+                <div class="photo">
+                  <div class="sale">sale</div>
+                  <div class="buttons">
+                    <a href="#" class="btn-main-small">Quick View</a>
+                    <a href="#" class="btn-main-small">
+                      <i class="fa fa-shopping-basket"></i> ADD TO CART
+                    </a>
+                  </div>
+                </div>
+                <div class="content">
+                  <h5>Aenean Ru Bristique</h5>
+                  <div class="stars">
+                    <a href="#" class="full"></a> <a href="#" class="full"></a>
+                    <a href="#"></a> <a href="#"></a> <a href="#"></a>
+                  </div>
+                </div>
+                <div class="line"></div>
+                <div class="actions">
+                  <div class="outlines">
+                    <a href="#" class="btn-outline"> <i class="far fa-heart"></i> </a>
+                    <a href="#" class="btn-outline">
+                      <i class="fas fa-exchange-alt"></i>
+                    </a>
+                  </div>
+                  <div class="price">
+                    <div class="btn-main-small no-hover">$ 30.00</div>
+                  </div>
+                </div>
+              </div>
+            </div>
             <div class="col-3">
               <div class="product-box">
                 <div class="photo">
