Fix HTML tab styling

--- a/src/partials/50_section-products.html
+++ b/src/partials/50_section-products.html
@@ -6,49 +6,25 @@
         <div class="col menu">
           <ul class="nav nav-tabs menu-tab-list" role="tablist">
             <li role="presentation">
-              <a href="#bed" aria-controls="bed" role="tab" data-toggle="tab">Bed</a>
+              <a href="#bed" aria-controls="bed" role="tab" data-toggle="tab" class="category-tab-select">Bed</a>
             </li>
             <li role="presentation">
-              <a
-                href="#chair"
-                aria-controls="chair"
-                role="tab"
-                data-toggle="tab"
-                class="category-tab-select"
-              >
+              <a href="#chair" aria-controls="chair" role="tab" data-toggle="tab" class="category-tab-select">
                 Chair
               </a>
             </li>
             <li role="presentation">
-              <a
-                href="#sofa"
-                aria-controls="sofa"
-                role="tab"
-                data-toggle="tab"
-                class="category-tab-select"
-              >
+              <a href="#sofa" aria-controls="sofa" role="tab" data-toggle="tab" class="category-tab-select">
                 Sofa
               </a>
             </li>
             <li role="presentation">
-              <a
-                href="#table"
-                aria-controls="table"
-                role="tab"
-                data-toggle="tab"
-                class="category-tab-select"
-              >
+              <a href="#table" aria-controls="table" role="tab" data-toggle="tab" class="category-tab-select">
                 Table
               </a>
             </li>
             <li role="presentation">
-              <a
-                href="#dining"
-                aria-controls="dining"
-                role="tab"
-                data-toggle="tab"
-                class="category-tab-select"
-              >
+              <a href="#dining" aria-controls="dining" role="tab" data-toggle="tab" class="category-tab-select">
                 Dining
               </a>
             </li>
