Add styles in tab section

--- a/src/partials/60_section-gallery.html
+++ b/src/partials/60_section-gallery.html
@@ -23,6 +23,7 @@
                 </li>
                 <li role="presentation" class="tab-list-element active">
                   <a
+                    class="no-right-border"
                     href="#top-seller"
                     aria-controls="top-seller"
                     role="tab"
