--- a/src/sass/components/_gallery-box.scss
+++ b/src/sass/components/_gallery-box.scss
@@ -10,16 +10,38 @@
   }
 
   .product-presentation-box {
-    border: 1px solid #000;
     .tabs-container {
       padding: 0;
 
       .tab-list {
         display: flex;
         flex-direction: row;
-        justify-content: space-around;
-
+        margin: 0;
+        padding: 0;
         .tab-list-element {
+          width: 25%;
+          height: 39px;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          border: 1px solid $container-border-color;
+          a {
+            // do poprawy border
+            display: block;
+            width: 100%;
+            text-align: center;
+            padding: 8px 10px;
+            font-weight: 550;
+            font-size: 0.9rem;
+            color: $text-color;
+            text-decoration: none;
+          }
+          &:hover {
+            background-color: #ccc;
+            border-top: 3px solid $primary;
+            color: $primary;
+            height: 38px;
+          }
         }
       }
     }
