Correct formatting, add default duration variable, add border-color tansition

--- a/src/sass/_extends.scss
+++ b/src/sass/_extends.scss
@@ -1,3 +1,5 @@
 %hover-transition {
-  transition: color 250ms, background-color 250ms, opacity 250ms;
+  $default-duration: 250ms;
+  transition: color $default-duration, background-color $default-duration,
+    opacity $default-duration, border-color $default-duration;
 }
