--- a/src/sass/components/_feature-box.scss
+++ b/src/sass/components/_feature-box.scss
@@ -12,8 +12,8 @@
 
   .icon {
     transform: translateY(-50%);
-
     i {
+      @extend %hover-transition;
       width: 60px;
       height: 60px;
       border-radius: 100%;
@@ -41,6 +41,7 @@
   }
 
   .content {
+    @extend %hover-transition;
     text-transform: uppercase;
     color: rgb(42, 42, 42);
     margin-top: -0.5rem;
