--- a/src/sass/components/_product-box.scss
+++ b/src/sass/components/_product-box.scss
@@ -27,6 +27,7 @@
     }
 
     .buttons {
+      @extend %hover-transition;
       display: flex;
       justify-content: space-between;
       opacity: 0;
