--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -12,6 +12,7 @@ header {
         line-height: 55px;
 
         a {
+          @extend %hover-transition;
           color: #ffffff;
           font-size: 13px;
 
@@ -72,6 +73,7 @@ header {
         color: #ffffff;
 
         .cart-icon {
+          @extend %hover-transition;
           background-color: $primary;
           width: 55px;
           height: 50px;
@@ -135,6 +137,7 @@ header {
           align-items: stretch;
 
           a {
+            @extend %hover-transition;
             color: $base-color;
             text-transform: uppercase;
             font-size: 12px;
@@ -187,6 +190,7 @@ header {
         }
 
         select {
+          @extend %hover-transition;
           -webkit-appearance: none;
           border: 0;
           background-color: transparent;
