--- a/src/sass/components/_panel-bar.scss
+++ b/src/sass/components/_panel-bar.scss
@@ -39,6 +39,7 @@
         font-weight: 600;
 
         a {
+          @extend %hover-transition;
           color: rgb(42, 42, 42);
           position: relative;
           text-decoration: none;
@@ -74,6 +75,7 @@
         margin-left: 0.5rem;
 
         a {
+          @extend %hover-transition;
           display: block;
           width: 13px;
           height: 13px;
