Add new variables and styles for gallery tabpanels

--- a/src/partials/60_section-gallery.html
+++ b/src/partials/60_section-gallery.html
@@ -97,6 +97,60 @@
                       </a>
                     </div>
 
+                    <div class="product-info">
+                      <div class="price-circle">
+                        <span class="new-price">$120.00</span>
+                        <span class="old-price">$160.00</span>
+                      </div>
+                      <h5>Aenean Ru Bristique</h5>
+                      <div class="stars">
+                        <a href="#" class="full"></a> <a href="#" class="full"></a>
+                        <a href="#"></a> <a href="#"></a> <a href="#"></a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div role="tabpanel" class="tab-pane" id="top-seller">
+                  <div class="tabpanel-content">
+                    <div class="outlines presentation-outlines">
+                      <a
+                        href="#"
+                        class="btn-outline"
+                        data-toggle="tooltip"
+                        data-placement="right"
+                        title="Add to favourite"
+                      >
+                        <i class="far fa-heart"></i>
+                      </a>
+                      <a
+                        href="#"
+                        class="btn-outline"
+                        data-toggle="tooltip"
+                        data-placement="right"
+                        title="Share"
+                      >
+                        <i class="fas fa-exchange-alt"></i>
+                      </a>
+                      <a
+                        href="#"
+                        class="btn-outline"
+                        data-toggle="tooltip"
+                        data-placement="right"
+                        title="Open In New Window"
+                      >
+                        <i class="fas fa-eye"></i>
+                      </a>
+                      <a
+                        href="#"
+                        class="btn-outline"
+                        data-toggle="tooltip"
+                        data-placement="right"
+                        title="Add To Cart"
+                      >
+                        <i class="fas fa-shopping-basket"></i>
+                      </a>
+                    </div>
+
                     <div class="content">
                       <div class="price-circle">
                         <span class="new-price">$120.00</span>
@@ -110,7 +164,6 @@
                     </div>
                   </div>
                 </div>
-                <div role="tabpanel" class="tab-pane" id="top-seller">top seller</div>
                 <div role="tabpanel" class="tab-pane" id="sale-off">sale off</div>
                 <div role="tabpanel" class="tab-pane" id="top-rated">top rated</div>
               </div>
