Add RWD to the mobile version

--- a/src/partials/10_header.html
+++ b/src/partials/10_header.html
@@ -67,8 +67,8 @@
             </div>
           </form>
         </div>
-        <span class="toogler"><i class="fas fa-bars"></i></span>
         <div class="col-auto menu">
+          <div class="toggle"><i class="fas fa-bars"></i></div>
           <ul class="menu-list">
             <li><a href="#" class="active">Home</a></li>
             <li><a href="#">Furniture</a></li>
