--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -12,7 +12,7 @@ header {
         line-height: 55px;
 
         a {
-          color: #ffffff;
+          color: $font-color;
           font-size: 13px;
 
           &:hover {
@@ -69,7 +69,7 @@ header {
       .cart-box {
         display: inline-block;
         position: relative;
-        color: #ffffff;
+        color: $font-color;
 
         .cart-icon {
           background-color: $primary;
@@ -114,20 +114,20 @@ header {
 
   .menu-bar {
     box-shadow: 2px 3.464px 6px rgba(1, 2, 2, 0.2);
-    background-color: #ffffff;
+    background-color: $font-color;
     height: 150px;
 
     .container > .row {
       height: 84px;
     }
 
-    .toogler {
-      display: none;
-    }
-
     .menu {
       display: flex;
       align-self: stretch;
+
+      .toggle {
+        display: none;
+      }
 
       ul {
         margin: 0;
@@ -147,14 +147,14 @@ header {
             text-decoration: none;
             display: flex;
             align-items: center;
-            border-top: 4px solid #ffffff;
+            border-top: 4px solid $font-color;
             font-weight: 500;
             letter-spacing: 1px;
 
             &:hover,
             &.active {
               background-color: $primary;
-              color: #ffffff;
+              color: $font-color;
               border-color: $primary;
             }
 
@@ -246,6 +246,10 @@ header {
       }
     }
   }
+
+  .toggler {
+    display: none;
+  }
 }
 
 @include media-breakpoint-between(xs, sm) {
@@ -254,29 +258,58 @@ header {
       position: relative;
       justify-content: center;
       align-items: center;
-      height: 100px;
-
-      .menu {
-        display: none;
-      }
-
-      .toogler {
-        display: flex;
-        align-items: center;
-      }
-
-      .col {
-        max-width: 300px;
-      }
 
       .search-form {
-        font-size: 10px;
-        height: 35px;
-
         .category {
           display: none;
         }
+
+        .search-field {
+          input {
+            font-size: 10px;
+            padding-left: 5px;
+          }
+
+          button {
+            font-size: 10px;
+            padding-left: 0;
+          }
+        }
+      }
+
+      .menu {
+        display: flex;
+        justify-content: center;
+        flex-grow: 1;
+
+        .menu-list {
+          display: none;
+          z-index: 9999;
+          width: 100%;
+          background-color: $primary;
+          border: none;
+
+          li {
+            width: 100%;
+            border: none;
+
+            a {
+              width: 100%;
+              display: block;
+              text-align: center;
+            }
+          }
+        }
+        .toggle {
+          display: flex;
+          align-self: center;
+          padding: 15px;
+        }
       }
     }
+  }
+  header .toggle:hover + .menu-list,
+  .menu-list:hover {
+    display: block;
   }
 }
