add all photos for products and blog section

--- a/src/partials/50_section-products.html
+++ b/src/partials/50_section-products.html
@@ -24,7 +24,7 @@
     <div class="row">
       <div class="col-3">
         <div class="product-box">
-          <div class="photo">
+          <div class="photo bed-photo">
             <div class="sale">sale</div>
             <div class="buttons">
               <a href="#" class="btn-main-small">Quick View</a>
@@ -53,7 +53,7 @@
       </div>
       <div class="col-3">
         <div class="product-box">
-          <div class="photo">
+          <div class="photo second-bed-photo">
             <div class="sale">sale</div>
             <div class="buttons">
               <a href="#" class="btn-main-small">Quick View</a>
@@ -82,7 +82,7 @@
       </div>
       <div class="col-3">
         <div class="product-box">
-          <div class="photo">
+          <div class="photo third-bed-photo">
             <div class="sale">sale</div>
             <div class="buttons">
               <a href="#" class="btn-main-small">Quick View</a>
@@ -111,7 +111,7 @@
       </div>
       <div class="col-3">
         <div class="product-box">
-          <div class="photo">
+          <div class="photo fourth-bed-photo">
             <div class="sale">sale</div>
             <div class="buttons">
               <a href="#" class="btn-main-small">Quick View</a>
@@ -140,7 +140,7 @@
       </div>
       <div class="col-3">
         <div class="product-box">
-          <div class="photo">
+          <div class="photo bedroom">
             <div class="sale">sale</div>
             <div class="buttons">
               <a href="#" class="btn-main-small">Quick View</a>
@@ -169,7 +169,7 @@
       </div>
       <div class="col-3">
         <div class="product-box">
-          <div class="photo">
+          <div class="photo second-bedroom">
             <div class="sale">sale</div>
             <div class="buttons">
               <a href="#" class="btn-main-small">Quick View</a>
@@ -198,7 +198,7 @@
       </div>
       <div class="col-3">
         <div class="product-box">
-          <div class="photo">
+          <div class="photo third-bedroom">
             <div class="sale">sale</div>
             <div class="buttons">
               <a href="#" class="btn-main-small">Quick View</a>
@@ -227,7 +227,7 @@
       </div>
       <div class="col-3">
         <div class="product-box">
-          <div class="photo">
+          <div class="photo fourth-bedroom">
             <div class="sale">sale</div>
             <div class="buttons">
               <a href="#" class="btn-main-small">Quick View</a>
