--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -9,7 +9,6 @@ $footer-bg: #363636;
 
 $primary: #d58e32;
 
-
 $button-hover-color: #fff;
 
 $text-color: #2a2a2a;
@@ -21,3 +20,4 @@ $form-border-color: #292929;
 $hover-transition-timing: 250ms;
 $bg-transition-timing: 250ms;
 $text-transition-timing: 250ms;
+$bright-font: #ffffff;
