--- a/src/sass/components/_featured.scss
+++ b/src/sass/components/_featured.scss
@@ -24,7 +24,7 @@
   }
 
   p {
-    color: #ffffff;
+    color: $bright-font;
     display: inline;
     font-size: 2.5em;
     font-family: "Poppins", sans-serif;
@@ -47,7 +47,7 @@
     line-height: 1;
     border-radius: 50%;
     background-color: #2a2a2a;
-    color: #fff;
+    color: $bright-font;
     padding: 20px;
     text-align: center;
 
@@ -63,8 +63,8 @@
   }
 
   .featured-header {
-    background-color: #2a2a2a;
-    color: #ffffff;
+    background-color: $footer-claim-bg;
+    color: $bright-font;
     display: flex;
     justify-content: space-between;
     padding: 15px 25px;
@@ -75,7 +75,7 @@
       display: inline-block;
 
       .hot-deals-point {
-        background-color: #ffffff;
+        background-color: $bright-font;
         width: 12px;
         height: 12px;
         border-radius: 50%;
@@ -107,7 +107,7 @@
       display: flex;
       justify-content: center;
       button {
-        background-color: #ffffff;
+        background-color: $bright-font;
         border: none;
         border-radius: 3px;
         padding: 15px 20px;
@@ -115,7 +115,7 @@
         font-size: 12px;
         &:hover {
           background-color: $primary;
-          color: #ffffff;
+          color: $bright-font;
         }
       }
     }
@@ -131,14 +131,14 @@
     font-size: 0;
   }
   .featured-btn {
-    color: #ffffff;
+    color: $bright-font;
     font-size: 15px;
     width: 50%;
     margin: 0;
     padding: 10px 0;
     border: none;
     outline: none;
-    background-color: #2a2a2a;
+    background-color: $footer-claim-bg;
     &:hover {
       background-color: $primary;
     }
