--- a/src/partials/60_section-gallery.html
+++ b/src/partials/60_section-gallery.html
@@ -56,7 +56,7 @@
 
               <!-- Tab panes -->
               <div class="tab-content">
-                <div role="tabpanel" class="tab-pane active" id="featured">
+                <div role="tabpanel" class="tab-pane" id="featured">
                   <div class="tabpanel-content">
                     <div class="outlines presentation-outlines">
                       <a
@@ -110,7 +110,7 @@
                     </div>
                   </div>
                 </div>
-                <div role="tabpanel" class="tab-pane" id="top-seller">
+                <div role="tabpanel" class="tab-pane active" id="top-seller">
                   <div class="tabpanel-content">
                     <div class="outlines presentation-outlines">
                       <a
@@ -151,7 +151,7 @@
                       </a>
                     </div>
 
-                    <div class="content">
+                    <div class="product-info">
                       <div class="price-circle">
                         <span class="new-price">$120.00</span>
                         <span class="old-price">$160.00</span>
@@ -162,8 +162,71 @@
                         <a href="#"></a> <a href="#"></a> <a href="#"></a>
                       </div>
                     </div>
+                    <div class="img-box"></div>
+
+                    <div
+                      id="carousel-example-generic"
+                      class="carousel slide product-carousel"
+                      data-ride="carousel"
+                    >
+                      <!-- Wrapper for slides -->
+                      <div class="carousel-inner" role="listbox">
+                        <div class="item active">
+                          <img src="images/black-chair.png" alt="..." />
+                        </div>
+                        <div class="item">
+                          <img src="images/black-chair.png" alt="..." />
+                        </div>
+                        <div class="item">
+                          <img src="images/black-chair.png" alt="..." />
+                        </div>
+                        <div class="item">
+                          <img src="images/black-chair.png" alt="..." />
+                        </div>
+                        <div class="item">
+                          <img src="images/black-chair.png" alt="..." />
+                        </div>
+                        <div class="item">
+                          <img src="images/black-chair.png" alt="..." />
+                        </div>
+                        <div class="item">
+                          <img src="images/black-chair.png" alt="..." />
+                        </div>
+                        <div class="item">
+                          <img src="images/black-chair.png" alt="..." />
+                        </div>
+                      </div>
+
+                      <!-- Controls -->
+                      <a
+                        class="left carousel-control"
+                        href="#carousel-example-generic"
+                        role="button"
+                        data-slide="prev"
+                      >
+                        <span
+                          class="glyphicon glyphicon-chevron-left left-control"
+                          aria-hidden="true"
+                        ></span>
+                        <span class="sr-only">Previous</span>
+                      </a>
+                      <a
+                        class="right carousel-control"
+                        href="#carousel-example-generic"
+                        role="button"
+                        data-slide="next"
+                      >
+                        <span
+                          class="glyphicon glyphicon-chevron-right right-control"
+                          aria-hidden="true"
+                        >
+                        </span>
+                        <span class="sr-only">Next</span>
+                      </a>
+                    </div>
                   </div>
                 </div>
+
                 <div role="tabpanel" class="tab-pane" id="sale-off">sale off</div>
                 <div role="tabpanel" class="tab-pane" id="top-rated">top rated</div>
               </div>
@@ -174,10 +237,13 @@
       <div class="col-6">
         <div class="gallery-presentation-image">
           <h5 class="presentation-header-top">
-            FROM <span class="presentation-price">$ 50.80</span>
+            FROM <span class="presentation-price"> $50.80</span>
           </h5>
-          <h3 class="presentation-header-bottom">Bedroom Bed</h3>
+          <h5 class="presentation-header-bottom">Bedroom Bed</h5>
           <button class="presentation-shop-now-button">SHOP NOW</button>
+          <div class="gallery-right-img-container">
+            <img src="images/bed.png" class="gallery-right-bg-img" alt="" />
+          </div>
         </div>
       </div>
     </div>
