--- a/src/partials/30_section-features.html
+++ b/src/partials/30_section-features.html
@@ -48,3 +48,37 @@
     </div>
   </div>
 </div>
+<div class="section--sale">
+  <div class="container">
+    <div class="row sale-row">
+      <div class="col-6 first-box">
+        <div class="sale-box">
+          <div class="text-sale-box">
+            <h1>guest room</h1>
+            <h2>sofa</h2>
+            <p>-20%</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-6 second-box">
+        <div class="office-box">
+          <div class="text-office-box">
+            <h1>office chair</h1>
+            <h2>collection</h2>
+            <p>$200.00</p>
+          </div>
+        </div>
+        <div class="row special-row">
+          <div class="col-12 third-box">
+            <div class="special-box">
+              <div class="text-special-box">
+                <h1>special collection</h1>
+                <p>save up 45% of furniture</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
