--- a/src/partials/50_section-products.html
+++ b/src/partials/50_section-products.html
@@ -21,7 +21,7 @@
         </div>
       </div>
     </div>
-    <div class="row">
+    <div class="row carousel-furniture">
       <div class="col-12 col-sm-6 col-lg-4">
         <div class="product-box">
           <div class="photo">
