--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -7,6 +7,7 @@
 @import "fontawesome/solid";
 @import "fontawesome/brands";
 @import "fontawesome/regular";
+@import "../../node_modules/tiny-slider/dist/tiny-slider.css";
 
 @import "components/header";
 @import "components/footer";
